# inu

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cogs/: demo.py
